# finance-company-loan-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml
notebooks/: 01_data_quality_check.ipynb
src/finance_company_loan_prediction/: __init__.py  __main__.py
src/finance_company_loan_prediction/pipelines/data_processing/: nodes.py  pipeline.py
